--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==7.1.2
 distlib==0.3.1
 Django==3.0.5
 django-crispy-forms==1.11.2
+django-environ==0.4.5
 django-reservation==0.2.9
 djongo==1.3.4
 filelock==3.0.12
