--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.0.5
 django-crispy-forms==1.11.2
 django-environ==0.4.5
+django-heroku==0.3.1
 django-reservation==0.2.9
 djongo==1.3.4
 filelock==3.0.12
@@ -17,6 +19,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 pbr==5.5.1
 Pillow==8.1.2
+psycopg2==2.8.6
 pygame==2.0.1
 PyJWT==1.7.1
 pymongo==3.11.3
@@ -35,3 +38,4 @@ virtualenv-clone==0.5.4
 virtualenvwrapper==4.8.4
 virtualenvwrapper-win==1.2.6
 Werkzeug==1.0.1
+whitenoise==5.2.0
