--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ Django==3.0.5
 django-crispy-forms==1.11.2
 django-environ==0.4.5
 django-heroku==0.3.1
+django-paypal==1.1.1
 django-reservation==0.2.9
 djongo==1.3.4
 filelock==3.0.12
-Flask==1.1.2
 gunicorn==20.1.0
 idna==2.10
 itsdangerous==1.1.0
